--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.5.9",
         "illuminate/support": "^5.0|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^6.0|^7.0",
-        "monolog/monolog": "^1.12|^2.0"
+        "monolog/monolog": "^1.12|^2.0|^3.0"
     },
     "require-dev": {
         "mockery/mockery" : "0.9.*",
